  - Added many variants of rifles and other equipment

 Graphics:
  - Added dozens of new 3D models
  - Made the AI more competent in choosing the right 3D model and GFX for their respective country.
  - Added hundreds of equipment GFX
  - Upscaled African/Middle East generals portrait
  - Fixed the USNA flag being incorrectly compressed causing it to not properly grab the formable flag
  - New and Improved Focus Icons for CHI
  
 Music:
  - Added 1 hour of ambient music. Reweighted the entire MD playlist
  - Added around 40 minutes of weighted Middle Eastern music
  - Added around 40 minutes of weighted Ukraine war music

 Localization:
  - Added thousand of lines for military equipment names
  - Added more translations and fixed a number of localization strings
  - Added "Political Power" to the Cost of X tooltips to be more clear
  - Added "Treasury Cost" to the Economic Cycle Upgrade cost tooltip

 Map:
  - Redrew the map for the Baltic countries, Kaliningrad, Belarus, Ukraine, Moldova, Poland, Czechia, Slovakia, Hungary, Austria, Switzerland, Germany, France, Italy, Spain, Portugal, Morocco, Libya, Egypt, Lebanon, Syria, Iraq, Kuwait, Iran, Israel, Palestine, Jordan, Qatar, Bahrain, UAE, Oman, Yemen, Saudi Arabia and the Koreas

 User Interface (QoL):
  - Added toggles for Nuclear Power Plant and Fossil Fuel Power Plant for more control over your energy
  - Added a highlight to all NATO member states who have not ratified your accession to NATO

v1.11.1b

 AI:
  - AI should be more likely ratify NATO applicants if they are influenced by a NATO member, has high opinion and if any of their neighbors are emerging, nationalist or salafist
  - USA should be more apt to declare operation enduring freedom if there is less than 25% threat or if they have not done so before Jan 2005
  - SER will now seek to rebuild Yugoslavia in peace deals at half cost after completion of the appropriate focus

 Balance: