@@ -24781,7 +24781,7 @@ focus_tree = {
 	}
 	focus = {
 		id = ISR_2000_show_hezbollah
-		icon = lebonan_resistance
+		icon = hez_gun2
 		x = 0
 		y = 4
 		relative_position_id = ISR_dawn_of_a_new_day
