@@ -14652,6 +14652,7 @@ defined_text = {
 	name = conservatism_L_icon
 	text = { trigger = { original_tag = ADY date < 2010.1.1 } localization_key = ADY.conservatism_icon }
 	text = { trigger = { original_tag = ADY date > 2010.1.1 } localization_key = ADY.conservatism_1_icon }
+	text = { trigger = { original_tag = AGL } localization_key = AGL.conservatism_icon }
 	text = { trigger = { original_tag = ALB } localization_key = ALB.conservatism_icon }
 	text = { trigger = { original_tag = ALT date < 2010.1.1 } localization_key = ALT.conservatism_icon }
 	text = { trigger = { original_tag = ALT date > 2010.1.1 } localization_key = ALT.conservatism_1_icon }
@@ -14823,6 +14824,7 @@ defined_text = {
 	name = liberalism_L_icon
 	text = { trigger = { OR = { original_tag = AFR original_tag = SIE } } localization_key = SIE.liberalism_icon }
 	text = { trigger = { original_tag = ADY } localization_key = ADY.liberalism_icon }
+	text = { trigger = { original_tag = AGL } localization_key = AGL.liberalism_icon }
 	text = { trigger = { original_tag = ALT } localization_key = ALT.liberalism_icon }
 	text = { trigger = { original_tag = ARG } localization_key = ARG.liberalism_icon }
 	text = { trigger = { original_tag = AUS } localization_key = AUS.liberalism_icon }
@@ -14996,6 +14998,7 @@ defined_text = {
 	text = { trigger = { OR = { original_tag = SYR original_tag = FSA original_tag = NUS } } localization_key = SYR.socialism_icon }
 	text = { trigger = { original_tag = ABK } localization_key = ABK.socialism_icon }
 	text = { trigger = { original_tag = ADY } localization_key = ADY.socialism_icon }
+	text = { trigger = { original_tag = AGL } localization_key = AGL.socialism_icon }
 	text = { trigger = { original_tag = ALT date < 2007.1.1 } localization_key = ALT.socialism_icon }
 	text = { trigger = { original_tag = ALT date > 2007.1.1 } localization_key = ALT.socialism_1_icon }
 	text = { trigger = { original_tag = ARG } localization_key = ARG.socialism_icon }
@@ -15738,6 +15741,7 @@ defined_text = {
 	name = Neutral_conservatism_L_icon
 	text = { trigger = { original_tag = ABK } localization_key = ABK.Neutral_conservatism_icon }
 	text = { trigger = { original_tag = ADY } localization_key = ADY.Neutral_conservatism_icon }
+	text = { trigger = { original_tag = AGL } localization_key = AGL.Neutral_conservatism_icon }
 	text = { trigger = { original_tag = ALB } localization_key = ALB.Neutral_conservatism_icon }
 	text = { trigger = { original_tag = ALT } localization_key = ALT.Neutral_conservatism_icon }
 	text = { trigger = { original_tag = ARG } localization_key = ARG.Neutral_conservatism_icon }
@@ -15948,6 +15952,7 @@ defined_text = {
 	text = { trigger = { OR = { original_tag = SYR original_tag = FSA original_tag = NUS } } localization_key = SYR.neutral_Social_icon }
 	text = { trigger = { original_tag = ADY date < 2020.1.1 } localization_key = ADY.neutral_Social_icon }
 	text = { trigger = { original_tag = ADY date > 2020.1.1 } localization_key = ADY.neutral_Social_1_icon }
+	text = { trigger = { original_tag = AGL } localization_key = AGL.neutral_Social_icon }
 	text = { trigger = { original_tag = ALT date < 2020.1.1 } localization_key = ALT.neutral_Social_icon }
 	text = { trigger = { original_tag = ALT date > 2020.1.1 } localization_key = ALT.neutral_Social_1_icon }
 	text = { trigger = { original_tag = ARG } localization_key = ARG.neutral_Social_icon }
@@ -16514,6 +16519,7 @@ defined_text = {
 	name = Nat_Autocracy_L_icon
 	text = { trigger = { has_country_flag = USoE_political_parties } localization_key = USoE.Nat_Autocracy_icon }
 	text = { trigger = { OR = { original_tag = SYR original_tag = FSA original_tag = NUS } } localization_key = SYR.Nat_Autocracy_icon }
+	text = { trigger = { original_tag = AGL } localization_key = AGL.Nat_Autocracy_icon }
 	text = { trigger = { original_tag = ALB } localization_key = ALB.Nat_Autocracy_icon }
 	text = { trigger = { original_tag = ALT } localization_key = ALT.Nat_Autocracy_icon }
 	text = { trigger = { original_tag = ARG } localization_key = ARG.Nat_Autocracy_icon }
