@@ -110,11 +110,6 @@ spriteTypes = {
 		legacy_lazy_load = no
 	}
 	spriteType = {
-		name = "GFX_AGL_emerging_left_wing_radical"
-		texturefile = "gfx/texticons/parties_icons/african_former_commies/AGL_emerging_left_wing_radical.dds"
-		legacy_lazy_load = no
-	}
-	spriteType = {
 		name = "GFX_GUB_emerging_left_wing_radical"
 		texturefile = "gfx/texticons/parties_icons/african_former_commies/GUB_emerging_left_wing_radical.dds"
 		legacy_lazy_load = no
@@ -202,6 +197,41 @@ spriteTypes = {
 	spriteType = {
 		name = "GFX_ALB_western_social_democrat"
 		texturefile = "gfx/texticons/parties_icons/albania/ALB_western_social_democrat.dds"
+		legacy_lazy_load = no
+	}
+	spriteType = {
+		name = "GFX_AGL_emerging_left_wing_radical"
+		texturefile = "gfx/texticons/parties_icons/angola/AGL_emerging_left_wing_radical.dds"
+		legacy_lazy_load = no
+	}
+	spriteType = {
+		name = "GFX_AGL_military_junta"
+		texturefile = "gfx/texticons/parties_icons/angola/AGL_military_junta.dds"
+		legacy_lazy_load = no
+	}
+	spriteType = {
+		name = "GFX_AGL_neutral_conservatism"
+		texturefile = "gfx/texticons/parties_icons/angola/AGL_neutral_conservatism.dds"
+		legacy_lazy_load = no
+	}
+	spriteType = {
+		name = "GFX_AGL_neutral_social"
+		texturefile = "gfx/texticons/parties_icons/angola/AGL_neutral_social.dds"
+		legacy_lazy_load = no
+	}
+	spriteType = {
+		name = "GFX_AGL_western_conservative"
+		texturefile = "gfx/texticons/parties_icons/angola/AGL_western_conservative.dds"
+		legacy_lazy_load = no
+	}
+	spriteType = {
+		name = "GFX_AGL_western_liberalism"
+		texturefile = "gfx/texticons/parties_icons/angola/AGL_western_liberalism.dds"
+		legacy_lazy_load = no
+	}
+	spriteType = {
+		name = "GFX_AGL_western_socialism"
+		texturefile = "gfx/texticons/parties_icons/angola/AGL_western_socialism.dds"
 		legacy_lazy_load = no
 	}
 	spriteType = {
