@@ -5260,11 +5260,14 @@
  AFR.Nat_Autocracy_desc: ""
  AFR.Nat_Fascism: "£generic_Nat_Fascism_small West Side Boys"
  AFR.Nat_Fascism_desc: ""
- AGL.conservatism: "£generic_conservatism_small UNITA - Uniao Nacional para a Independencia Total de Angola"
+ AGL.conservatism: "£AGL_western_conservative UNITA - Uniao Nacional para a Independencia Total de Angola"
+ AGL.conservatism_icon: "£AGL_western_conservative"
  AGL.conservatism_desc: ""
- AGL.liberalism: "£generic_liberalism_small PLD - Partido Liberal Democrático"
+ AGL.liberalism: "£AGL_western_liberalism PLD - Partido Liberal Democrático"
+ AGL.liberalism_icon: "£AGL_western_liberalism"
  AGL.liberalism_desc: ""
- AGL.socialism: "£generic_socialism_small PSD - Partido Social-Democrata"
+ AGL.socialism: "£AGL_western_socialism PSD - Partido Social-Democrata"
+ AGL.socialism_icon: "£AGL_western_socialism"
  AGL.socialism_desc: ""
  AGL.Communist-State: "£AGL_emerging_left_wing_radical MPLA - Movimento Popular de Libertação de Angola (Hardline)"
  AGL.Communist-State_icon: "£AGL_emerging_left_wing_radical"
@@ -5272,11 +5275,14 @@
  AGL.anarchist_communism: "£AGL_emerging_left_wing_radical MPLA - Movimento Popular de Libertação de Angola (Moderate)"
  AGL.anarchist_communism_icon: "£AGL_emerging_left_wing_radical"
  AGL.anarchist_communism_desc: ""
- AGL.Neutral_conservatism: "£generic_Neutral_conservatism_small FNLA - Frente Nacional de Libertação de Angola"
+ AGL.Neutral_conservatism: "£AGL_neutral_conservatism FNLA - Frente Nacional de Libertação de Angola"
+ AGL.Neutral_conservatism_icon: "£AGL_neutral_conservatism"
  AGL.Neutral_conservatism_desc: ""
- AGL.neutral_Social: "£generic_neutral_Social_small PRS - Partido de Renovação Social"
+ AGL.neutral_Social: "£AGL_neutral_social PRS - Partido de Renovação Social"
+ AGL.neutral_Social_icon: "£AGL_neutral_social"
  AGL.neutral_Social_desc: ""
- AGL.Nat_Autocracy: "£generic_Nat_Autocracy_small FAA - Forças Armadas Angolanas"
+ AGL.Nat_Autocracy: "£AGL_military_junta FAA - Forças Armadas Angolanas"
+ AGL.Nat_Autocracy_icon: "£AGL_military_junta"
  AGL.Nat_Autocracy_desc: ""
  ALB.Western_Autocracy: "£ALB_western_autocracy PLL - Partia Lëvizja e Legalitetit"
  ALB.Western_Autocracy_icon: "£ALB_western_autocracy"
