@@ -124,7 +124,9 @@ v1.11.2
   - Added hundreds of equipment GFX
   - Upscaled African/Middle East generals portrait
   - Fixed the USNA flag being incorrectly compressed causing it to not properly grab the formable flag
-  - New and Improved Focus Icons for CHI
+  - New and improved focus icons for CHI
+  - New and reworked portraits for ENG
+  - New icons for AGL parties
   
  Music:
   - Added 1 hour of ambient music. Reweighted the entire MD playlist
